# Sentiment_Analysis_CIL

./: README.md  main.py
experiments/FeatureProcessing/: README.md  Symbols.txt  Validate.txt  build_features.py  classifier.py  probs_sgd.py  translate.py
experiments/ManualCombinationsOfModels/: README.md  combination_of_models.py  similarity_of_model_predictions.py
experiments/RNTN/CppImpl/: .gitignore  CMakeLists.txt  README.md
experiments/RNTN/CppImpl/src/: Database.cpp  Database.h  Model.cpp  Model.h  Ngram.cpp  Ngram.h  RNTN.cpp
models/: TextRCNN.py  dcnn.py  fast_text.py  glove_svm.py  main.py  ngrams_sgd.py  rcnn.py  simple_conv.py  simple_lstm.py  transfer_sgd.py  xgboost_ensemble.py
models/glove/: build_vocab.sh  cut_vocab.sh  pickle_vocab.py  vocab.pkl
models/src/: cooc.py  glove_embeddings.py  pickle_vocab.py
utils/: model.py  segmenter.py  utils.py
